---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(col, -2, 2) as result FROM (VALUES ('hello'), ('world'), ('test')) AS t(col)\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| lo     |",
        "| ld     |",
        "| st     |",
        "+--------+",
    ],
)
